[gd_scene load_steps=3 format=3 uid="uid://bwr14n8axjby6"]

[ext_resource type="Script" uid="uid://b2a51msxubvif" path="res://strato_defense/guns.gd" id="1_ftnpf"]
[ext_resource type="PackedScene" uid="uid://d2rnxi0f7fa63" path="res://strato_defense/guns/gun/main_gun.tscn" id="2_4h2o0"]

[node name="Guns" type="Node2D"]
script = ExtResource("1_ftnpf")
metadata/_edit_lock_ = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="MainGunLeft" parent="." instance=ExtResource("2_4h2o0")]
unique_name_in_owner = true
position = Vector2(32, 368)
gun_position = "LEFT_TOWER"

[node name="MainGunMiddle" parent="." instance=ExtResource("2_4h2o0")]
unique_name_in_owner = true
position = Vector2(480, 344)
gun_position = "MIDDLE_TOWER"

[node name="MainGunRight" parent="." instance=ExtResource("2_4h2o0")]
unique_name_in_owner = true
position = Vector2(928, 368)
gun_position = "RIGHT_TOWER"
